--- a/Survey/Survey/Base.lproj/Main.storyboard
+++ b/Survey/Survey/Base.lproj/Main.storyboard
@@ -1,11 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="O2z-a3-ahm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Response Table View Controller-->
+        <scene sceneID="YXP-ZY-Vyp">
+            <objects>
+                <tableViewController id="lHX-pH-lOE" customClass="ResponseTableViewController" customModule="Survey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vlG-db-BfW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="surveyCell" textLabel="VHp-oq-f0r" detailTextLabel="1Fc-8b-FOo" style="IBUITableViewCellStyleValue1" id="rJL-J0-Uap">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rJL-J0-Uap" id="U5J-aM-A6p">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VHp-oq-f0r">
+                                            <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1Fc-8b-FOo">
+                                            <rect key="frame" x="316" y="12" width="44" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lHX-pH-lOE" id="ZAc-UD-Unw"/>
+                            <outlet property="delegate" destination="lHX-pH-lOE" id="TqZ-7i-wJt"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="zzq-ew-RnX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bgQ-Mg-rch" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1504.8" y="475.41229385307349"/>
+        </scene>
+        <!--Survey View Controller-->
+        <scene sceneID="kyE-53-gw9">
+            <objects>
+                <viewController id="fFd-oL-ofS" customClass="SurveyViewController" customModule="Survey" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LEp-oi-lCk"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zwf-kP-546"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i0u-ag-GSO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Phh-bp-F9J">
+                                <rect key="frame" x="47.5" y="263.5" width="280" height="140"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vUW-pU-yQl">
+                                        <rect key="frame" x="8" y="0.0" width="264" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="language" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEr-hV-sJc">
+                                        <rect key="frame" x="8" y="55" width="264" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBn-Kc-JSr">
+                                        <rect key="frame" x="115.5" y="110" width="49" height="30"/>
+                                        <state key="normal" title="Submit"/>
+                                        <connections>
+                                            <action selector="submit:" destination="fFd-oL-ofS" eventType="touchUpInside" id="9eL-Ly-moS"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="vUW-pU-yQl" secondAttribute="trailing" constant="8" id="EQq-f6-RQb"/>
+                                    <constraint firstItem="XEr-hV-sJc" firstAttribute="leading" secondItem="Phh-bp-F9J" secondAttribute="leading" constant="8" id="YYA-vQ-N4M"/>
+                                    <constraint firstAttribute="width" constant="280" id="aJM-jK-vgI"/>
+                                    <constraint firstAttribute="trailing" secondItem="XEr-hV-sJc" secondAttribute="trailing" constant="8" id="kHk-Bn-FbA"/>
+                                    <constraint firstItem="vUW-pU-yQl" firstAttribute="leading" secondItem="Phh-bp-F9J" secondAttribute="leading" constant="8" id="xKC-VR-qNF"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.057630271320000002" green="1" blue="0.71588877080000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Phh-bp-F9J" firstAttribute="centerY" secondItem="i0u-ag-GSO" secondAttribute="centerY" id="FwW-dA-CFU"/>
+                            <constraint firstItem="Phh-bp-F9J" firstAttribute="centerX" secondItem="i0u-ag-GSO" secondAttribute="centerX" id="wBH-8K-2pR"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="899-yc-Lvp"/>
+                    <connections>
+                        <outlet property="langTextField" destination="XEr-hV-sJc" id="4wE-c9-9GX"/>
+                        <outlet property="nameTextfield" destination="vUW-pU-yQl" id="bdu-Eb-3ab"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BTC-gm-D4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1504.8" y="-176.76161919040482"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ibd-lI-3kt">
+            <objects>
+                <tabBarController id="O2z-a3-ahm" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="EIi-th-1XK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="kgJ-DV-nVH" kind="relationship" relationship="viewControllers" id="G65-nP-omB"/>
+                        <segue destination="zgD-SR-o1t" kind="relationship" relationship="viewControllers" id="tQe-de-WEA"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lRv-fx-fMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-387" y="149"/>
+        </scene>
+        <!--Responses-->
+        <scene sceneID="eLB-4B-ynO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zgD-SR-o1t" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Responses" id="9Mx-b8-La6"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cm2-vh-1BS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lHX-pH-lOE" kind="relationship" relationship="rootViewController" id="tyq-C9-yJW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6dk-GI-9SM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="565.60000000000002" y="475.41229385307349"/>
+        </scene>
+        <!--Survey-->
+        <scene sceneID="bQ0-vO-WJW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kgJ-DV-nVH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Survey" id="KZA-oS-dIs"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CAX-5w-adP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fFd-oL-ofS" kind="relationship" relationship="rootViewController" id="s60-KI-raW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xmr-8V-qVF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="565.60000000000002" y="-176.76161919040482"/>
+        </scene>
+    </scenes>
 </document>
